[package]
name = "android_logger"
version = "0.9.0"
authors = ["The android_logger Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Nercury/android_logger-rs"
description = """
A logging implementation for `log` which hooks to android log output.
"""
keywords = ["android", "bindings", "log", "logger"]
categories = ["api-bindings"]

[features]
default = ["regex"]
regex = ["env_logger/regex"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"
android_log-sys = "0.2.0"

[dependencies.env_logger]
version = "0.8.4"
default-features = false

[badges]
travis-ci = { repository = "Nercury/android_logger-rs" }
